@@ -1575,7 +1575,8 @@ SPEC is a predicate specifier that contains stuff like `or', `and',
 
 
 (declare-function iswitchb-read-buffer "iswitchb"
-		  (prompt &optional default require-match start matches-set))
+		  (prompt &optional default require-match
+			  _predicate start matches-set))
 (defvar iswitchb-temp-buflist)
 
 (defun gnus-iswitchb-completing-read (prompt collection &optional require-match
